fix styling for menu items on mobile

--- a/_app/styles/less/components/menu.less
+++ b/_app/styles/less/components/menu.less
@@ -1,6 +1,10 @@
+.foodItemGroup {
+
+}
+
 .foodItem {
 	.text-primary;
-	margin: 20px;
+	margin: 0 0 15px;
 }
 
 .foodItem-name {
@@ -18,6 +22,15 @@
 }
 
 .foodItem-description {
-	font-size: 1.1em;
+	font-size: 1.2em;
 	.text-light;
+	line-height: 1.2;
+}
+
+.foodItemGroup-firstItem {
+	margin-top: 10px;
+}
+
+.foodItemGroup-lastItem {
+	margin-bottom: 10px;
 }
