--- a/_app/styles/less/custom-media-queries.less
+++ b/_app/styles/less/custom-media-queries.less
@@ -2,6 +2,7 @@
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-sm-min) {
+	//UTILITIES
 	.no-top-pad-on-mobile {  }
 
 	.pad-50 {
@@ -39,6 +40,18 @@
 		padding-left: @pad-75;
 	}
 
+	//menu.less
+	.foodItem {
+		margin: 20px;
+	}
+
+	.foodItemGroup-firstItem {
+		margin-top: 0;
+	}
+
+	.foodItemGroup-lastItem {
+		margin-bottom: 0;
+	}
 }
 
 /* Medium devices (desktops, 992px and up) */
